[package]
name = "aors"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/JoelEng/AdventOfRS"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Useful rs tools for Advent of Code"

[lib]
proc-macro = true

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
ureq = "2.5"

# config.rs dependencies
confy = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
filenamify = "0.1"

# post.rs dependencies
fancy-regex = "0.11"

# lib proc-macro dependencies
syn = "2.0"
quote = "1.0"
